--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="forgot_password">Forgot Passwword ? Click</string>
     <string name="text_here">Here</string>
     <string name="haven_t_account_register">Haven’t Account ? Register</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
